--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             .difficulty-option { margin: 5px; padding: 8px 15px; }
         }
     </style>
-<audio hidden="True" id="section4Audio" preload="auto"><source src="เสียงลูกค้า/health-question.mp3" type="audio/mpeg"/></audio><audio hidden="True" id="section5Audio" preload="auto"><source src="เสียงลูกค้า/registration-step1.mp3" type="audio/mpeg"/></audio></head>
+</head>
 <body>
 <div id="loadingOverlay">
 <div class="spinner-border text-light" role="status">
@@ -1124,5 +1124,5 @@
         document.addEventListener('DOMContentLoaded', initializeUserAndDOM);
         
     </script>
-</body>
+<div hidden="True" id="preload-audio"><audio id="health-question" preload="auto"><source src="เสียงลูกค้า/health-question.mp3" type="audio/mpeg"/></audio><audio id="registration-step1" preload="auto"><source src="เสียงลูกค้า/registration-step1.mp3" type="audio/mpeg"/></audio></div></body>
 </html>
