--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
         const registrationStepNames = [
             "1. ขอสะกดชื่อ-นามสกุล", 
             "2. ขอวันเดือนปีเกิด", 
-            "3. สอบถามที่อยู่”,
+            "3. สอบถามที่อยู่",
             "4. ขอเบอร์มือถือ",
             "5. ผู้รับประโยชน์", 
-            "6. ลูกค้ายินยอมให้บริษัทB เก็บรวบรวมใช้ข้อมูลเพื่อการออกกรมธรรม์และทำการตลาดนะครับ ตกลงหรือโอเคก็ได้ครับ
+            "6. ลูกค้ายินยอมให้บริษัทB เก็บรวบรวมใช้ข้อมูลเพื่อการออกกรมธรรม์และทำการตลาดนะครับ ตกลงหรือโอเคก็ได้ครับ",
             "7. เพื่อเป็นการตอบรับโครงการ รบกวนลูกค้าพูดคำว่า ตกลงซื้อประกัน ให้ด้วยครับ"
         ];
 
