--- a/index.html
+++ b/index.html
@@ -155,26 +155,26 @@
 <audio id="customerAudio" src=""></audio>
 <button id="recordBtn">🎙️ เริ่มบันทึกเสียง (พนักงาน)</button>
 <button disabled="" id="nextRoundBtn">✅ จบบทที่ 1 (ไปช่วงที่ 1.5)</button>
-<p id="status">รอเริ่มบันทึกบทพูดเปิดตัว</p>
+<p id="status">รอเริ่มบันทึกบทพูดเปิดตัว</p><audio id="audio_รอเริ่มบันทึกบทพูดเปิดตัว" preload="auto" src="audio/opening.mp3"></audio><button onclick="document.getElementById('audio_รอเริ่มบันทึกบทพูดเปิดตัว').play()">🔊 เล่นเสียงลูกค้า</button>
 <hr/>
 <h2>🛒 ช่วงที่ 1.5: การนำเสนอผลิตภัณฑ์ (Pitch)</h2>
 <button disabled="" id="pitchRecordBtn">🎙️ เริ่มบันทึกเสียงนำเสนอ</button>
 <button disabled="" id="nextSection2Btn">✅ จบบทที่ 1.5 (ไปช่วงที่ 2)</button>
-<p id="pitchStatus">รอเริ่มนำเสนอ</p>
+<p id="pitchStatus">รอเริ่มนำเสนอ</p><audio id="audio_รอเริ่มนำเสนอ" preload="auto" src="audio/presentation.mp3"></audio><button onclick="document.getElementById('audio_รอเริ่มนำเสนอ').play()">🔊 เล่นเสียงลูกค้า</button>
 <hr/>
 <h2>❓ ช่วงที่ 2: ตอบคำถามลูกค้า (รอบที่ <span id="qRound">1</span>/<span id="maxQSpan">10</span>)</h2>
 <audio id="questionAudio"></audio>
 <button disabled="" id="startQBtn">🔊 เริ่มคำถามลูกค้า</button>
 <button disabled="" id="answerBtn">🎙️ เริ่มบันทึกคำตอบ</button>
 <button disabled="" id="nextSection3Btn">✅ จบบทที่ 2 (ไปช่วงที่ 3)</button>
-<p id="qStatus">รอเริ่มช่วงที่ 2</p>
+<p id="qStatus">รอเริ่มช่วงที่ 2</p><audio id="audio_รอเริ่มช่วงที่ 2" preload="auto" src="audio/section2.mp3"></audio><button onclick="document.getElementById('audio_รอเริ่มช่วงที่ 2').play()">🔊 เล่นเสียงลูกค้า</button>
 <hr/>
 <h2>💰 ช่วงที่ 3: ปิดการขาย + ข้อโต้แย้ง (รอบที่ <span id="cRound">1</span>/<span id="maxCSpan">5</span>)</h2>
 <button disabled="" id="closeBtn">🎙️ 1. บันทึกสคริปต์ปิดการขาย</button>
 <audio id="objectionAudio"></audio>
 <button disabled="" id="replyBtn">🎙️ 2. บันทึกเสียงตอบข้อโต้แย้ง</button>
 <button disabled="" id="nextSection4Btn">✅ จบบทที่ 3 (ไปช่วงที่ 4)</button>
-<p id="cStatus">รอเริ่มช่วงที่ 3</p>
+<p id="cStatus">รอเริ่มช่วงที่ 3</p><audio id="audio_รอเริ่มช่วงที่ 3" preload="auto" src="audio/section3.mp3"></audio><button onclick="document.getElementById('audio_รอเริ่มช่วงที่ 3').play()">🔊 เล่นเสียงลูกค้า</button>
 <hr/>
 <h2>🏥 ช่วงที่ 4: คำถามสุขภาพ (<span id="hQName">คำถามหลัก Q1/1</span>)</h2>
 <div id="healthQuestionDisplay" style="margin: 15px 0; padding: 15px; border: 1px dashed #d9534f; border-radius: 8px; background-color: #ffeaea; font-weight: bold; font-size: 18px; color: #333;">
@@ -183,7 +183,7 @@
 <audio id="healthAudio"></audio>
 <button disabled="" id="answerHBtn">🎙️ 1. บันทึกคำถามสุขภาพหลัก</button>
 <button disabled="" id="nextSection5Btn">✅ จบบทที่ 4 (ไปช่วงที่ 5)</button>
-<p id="hStatus">รอเริ่มช่วงที่ 4</p>
+<p id="hStatus">รอเริ่มช่วงที่ 4</p><audio id="audio_รอเริ่มช่วงที่ 4" preload="auto" src="audio/section4.mp3"></audio><button onclick="document.getElementById('audio_รอเริ่มช่วงที่ 4').play()">🔊 เล่นเสียงลูกค้า</button>
 <hr/>
 <h2>🤝 ช่วงที่ 5: ลงทะเบียนลูกค้า (ขั้นตอนที่ <span id="aRound">1</span>/<span id="maxASpan">7</span>)</h2>
 <audio id="agreementAudio"></audio>
@@ -195,7 +195,7 @@
 <button disabled="" id="startABtn">🔊 เริ่มขั้นตอนการลงทะเบียน</button>
 <button disabled="" id="answerABtn">🎙️ บันทึกการตอบกลับ</button>
 <button disabled="" id="finalSaveBtn">💾 บันทึกการทดสอบเสร็จสิ้น</button>
-<p id="aStatus">รอเริ่มช่วงที่ 5</p>
+<p id="aStatus">รอเริ่มช่วงที่ 5</p><audio id="audio_รอเริ่มช่วงที่ 5" preload="auto" src="audio/section5.mp3"></audio><button onclick="document.getElementById('audio_รอเริ่มช่วงที่ 5').play()">🔊 เล่นเสียงลูกค้า</button>
 <hr/>
 <div id="certificate">
 <h1>ใบประกาศนียบัตร</h1>
@@ -300,10 +300,10 @@
         const registrationStepNames = [
             "1. ขอสะกดชื่อ-นามสกุล", 
             "2. ขอวันเดือนปีเกิด", 
-            "3. สอบถามที่อยู่",
+            "3. สอบถามที่อยู่”,
             "4. ขอเบอร์มือถือ",
             "5. ผู้รับประโยชน์", 
-            "6. ลูกค้ายินยอมให้บริษัทB เก็บรวบรวมใช้ข้อมูลเพื่อการออกกรมธรรม์และทำการตลาดนะครับ ตกลงหรือโอเคก็ได้ครับ",
+            "6. ลูกค้ายินยอมให้บริษัทB เก็บรวบรวมใช้ข้อมูลเพื่อการออกกรมธรรม์และทำการตลาดนะครับ ตกลงหรือโอเคก็ได้ครับ
             "7. เพื่อเป็นการตอบรับโครงการ รบกวนลูกค้าพูดคำว่า ตกลงซื้อประกัน ให้ด้วยครับ"
         ];
 
@@ -1124,5 +1124,5 @@
         document.addEventListener('DOMContentLoaded', initializeUserAndDOM);
         
     </script>
-<div hidden="True" id="preload-audio"><audio id="health-question" preload="auto"><source src="เสียงลูกค้า/health-question.mp3" type="audio/mpeg"/></audio><audio id="registration-step1" preload="auto"><source src="เสียงลูกค้า/registration-step1.mp3" type="audio/mpeg"/></audio></div></body>
+</body>
 </html>
