--- a/index.html
+++ b/index.html
@@ -640,5 +640,5 @@
     document.addEventListener('DOMContentLoaded', initApp);
 
 </script>
-</body>
+<div id="section4"><h3>คำถามสุขภาพ</h3><p>ใน 5 ปีที่ผ่านมา ท่านเคยได้รับบาดเจ็บหรือเจ็บป่วยเป็นเหตุให้ต้องรับการรักษาตัวในโรงพยาบาลหรือไม่?</p><button onclick="startRecording()">🎤 เริ่มบันทึกคำถาม</button><button onclick="stopRecording(); playCustomerAudio();">⏹️ หยุดบันทึก</button><audio controls="True" id="customerAudio" src="customer_response_hypertension.mp3"></audio><h4>คำถามสอบโรค</h4><p>1. เป็นมานานเท่าไหร่</p><button onclick="startFollowupRecording(1)">🎤 บันทึกคำตอบข้อ 1</button><p>2. ลักษณะอาการเป็นอย่างไร</p><button onclick="startFollowupRecording(2)">🎤 บันทึกคำตอบข้อ 2</button><p>3. วิธีการรักษาของแพทย์</p><button onclick="startFollowupRecording(3)">🎤 บันทึกคำตอบข้อ 3</button><p>4. ตรวจครั้งล่าสุดเมื่อไหร่</p><button onclick="startFollowupRecording(4)">🎤 บันทึกคำตอบข้อ 4</button><p>5. ผลตรวจเป็นอย่างไร</p><button onclick="startFollowupRecording(5)">🎤 บันทึกคำตอบข้อ 5</button><button onclick="goToSection5()">➡️ ไปช่วงที่ 5</button></div><div id="section5"></div></body>
 </html>
